@@ -1,0 +1,3 @@
+MD5 994329d660aa5dce7429eaee86426010 zfs-fuse-0.4.0_beta1.tar.bz2 606593
+RMD160 93c4aea550f3b55d39c2657f90e863abf89b5f79 zfs-fuse-0.4.0_beta1.tar.bz2 606593
+SHA256 0904b7a031ad0b8ae591d3aefa9a62b83d973392c6a8f8426d17d9b37d9974bb zfs-fuse-0.4.0_beta1.tar.bz2 606593
