@@ -1,0 +1,39 @@
+#!/sbin/runscript
+# Copyright 1999-2007 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/zfs-fuse/files/Attic/zfs-fuse.rc-r1,v 1.1 2007/12/25 17:40:18 trapni Exp $
+
+depend() {
+	need localmount
+	before net
+}
+
+PIDFILE="/var/run/zfs-fuse.pid"
+EXEFILE="/usr/sbin/zfs-fuse"
+
+checksystem() {
+	return 0 # TODO
+}
+
+start() {
+	ebegin "Starting ZFS-FUSE"
+	checksystem || return 1
+	start-stop-daemon --start --background --make-pidfile --pidfile ${PIDFILE} \
+		--exec ${EXEFILE} --user daemon --group disk
+	rv=$?
+	eend $rv
+
+	if [[ $rv -eq 0 ]]; then
+		ebegin "Mounting ZFS filesystems"
+		zfs mount -a
+		eend $?
+	fi
+}
+
+stop() {
+	ebegin "Stopping ZFS-FUSE"
+	checksystem || return 2
+	start-stop-daemon --stop --pidfile ${PIDFILE} \
+		--exec ${EXEFILE} --retry TERM/1/TERM/2/TERM/4/TERM/8/KILL
+	eend $?
+}
