@@ -1,6 +1,12 @@
 # ChangeLog for sys-fs/zfs-fuse
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/zfs-fuse/Attic/ChangeLog,v 1.2 2007/09/02 07:43:34 trapni Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/zfs-fuse/Attic/ChangeLog,v 1.3 2007/12/25 17:40:17 trapni Exp $
+
+*zfs-fuse-0.4.0_beta1-r2 (25 Dec 2007)
+
+  25 Dec 2007; Christian Parpart <trapni@gentoo.org> +files/zfs-fuse.rc-r1,
+  +zfs-fuse-0.4.0_beta1-r2.ebuild:
+  improved init script and install paths
 
 *zfs-fuse-0.4.0_beta1-r1 (02 Sep 2007)
 
